<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/click_to_print" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/print_by_bluetooth" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_usb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/print_by_usb" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/ip" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tcp_ip"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:text="@string/ex_ip"
                    android:inputType="number" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/port" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tcp_port"
                    android:layout_width="80dp"
                    android:text="@string/ex_port"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_tcp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print_by_tcp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>